[package]
name = "crypto-ticker-chart"
version = "0.1.0"
authors = ["Shane Snover <ssnover95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
rand = "0.7"
serde = "1.0"
serde_json = "1.0"
termion = "1.5"
tui = "0.14.0"
